Now task output is a separate table,  better activity page,
