# backend/src/command/dto/command-result.dto.ts
@@ -1,5 +1,5 @@
 import { ApiProperty } from '@nestjs/swagger';
-import { IsBoolean, IsOptional, IsString } from 'class-validator';
+import { IsBoolean } from 'class-validator';
 
 /**
  * Data Transfer Object representing the result of a command execution.
@@ -11,22 +11,4 @@ export class CommandResultDto {
   @ApiProperty({ description: 'Indicates if the command was successful.' })
   @IsBoolean()
   success: boolean;
-
-  /**
-   * The standard output produced by the command.
-   */
-  @ApiProperty({ description: 'Standard output from the command.' })
-  @IsString()
-  output: string;
-
-  /**
-   * The error output or message if the command failed.
-   */
-  @ApiProperty({
-    description: 'Error output or message if the command failed.',
-    required: false,
-  })
-  @IsOptional()
-  @IsString()
-  error?: string;
 }
