# backend/src/task/task-result/entities/task-result.entity.ts
@@ -5,11 +5,13 @@ import {
   ManyToOne,
   CreateDateColumn,
   UpdateDateColumn,
+  OneToMany,
 } from 'typeorm';
 import type { Relation } from 'typeorm';
 import { Task } from 'src/task/entities/task.entity';
 import { TaskRun } from 'src/task/task-run/entities/task-run.entity';
 import { TaskResultStatus } from 'src/task/task-result/types';
+import { TaskResultOutput } from 'src/task/task-result/task-result-output/entities/task-result-output.entity';
 
 @Entity()
 export class TaskResult {
@@ -26,9 +28,10 @@ export class TaskResult {
   })
   taskRun?: Relation<TaskRun>;
 
-  // TODO: put output in a separate table
-  @Column({ type: 'text', nullable: true })
-  output: string | null;
+  @OneToMany(() => TaskResultOutput, (output) => output.taskResult, {
+    cascade: true,
+  })
+  output?: Relation<TaskResultOutput[]>;
 
   @Column({
     type: 'text',
