# swagger.json
@@ -26,9 +26,7 @@
             }
           }
         },
-        "tags": [
-          "Command"
-        ]
+        "tags": ["Command"]
       },
       "put": {
         "operationId": "CommandController_update",
@@ -64,9 +62,7 @@
             }
           }
         },
-        "tags": [
-          "Command"
-        ]
+        "tags": ["Command"]
       }
     },
     "/commands": {
@@ -95,9 +91,7 @@
             }
           }
         },
-        "tags": [
-          "Command"
-        ]
+        "tags": ["Command"]
       }
     },
     "/task-run": {
@@ -110,9 +104,7 @@
           }
         },
         "summary": "Get all task run configurations",
-        "tags": [
-          "TaskRun"
-        ]
+        "tags": ["TaskRun"]
       }
     },
     "/task-run/favorites": {
@@ -125,9 +117,7 @@
           }
         },
         "summary": "Get all favorited task run configurations",
-        "tags": [
-          "TaskRun"
-        ]
+        "tags": ["TaskRun"]
       }
     },
     "/task-run/{id}/execute": {
@@ -159,9 +149,7 @@
           }
         },
         "summary": "Execute a task using a task run configuration",
-        "tags": [
-          "TaskRun"
-        ]
+        "tags": ["TaskRun"]
       }
     },
     "/task-run/{id}/favorite": {
@@ -183,9 +171,7 @@
           }
         },
         "summary": "Toggle favorite status of a task run configuration",
-        "tags": [
-          "TaskRun"
-        ]
+        "tags": ["TaskRun"]
       }
     },
     "/tasks": {
@@ -214,9 +200,7 @@
             }
           }
         },
-        "tags": [
-          "tasks"
-        ]
+        "tags": ["tasks"]
       },
       "get": {
         "operationId": "TaskController_findAll",
@@ -236,9 +220,7 @@
             }
           }
         },
-        "tags": [
-          "tasks"
-        ]
+        "tags": ["tasks"]
       }
     },
     "/tasks/{id}": {
@@ -266,9 +248,7 @@
             }
           }
         },
-        "tags": [
-          "tasks"
-        ]
+        "tags": ["tasks"]
       },
       "put": {
         "operationId": "TaskController_update",
@@ -304,9 +284,7 @@
             }
           }
         },
-        "tags": [
-          "tasks"
-        ]
+        "tags": ["tasks"]
       },
       "delete": {
         "operationId": "TaskController_remove",
@@ -325,9 +303,7 @@
             "description": ""
           }
         },
-        "tags": [
-          "tasks"
-        ]
+        "tags": ["tasks"]
       }
     },
     "/tasks/{id}/execute": {
@@ -358,9 +334,7 @@
             "description": ""
           }
         },
-        "tags": [
-          "tasks"
-        ]
+        "tags": ["tasks"]
       }
     },
     "/tasks/{id}/queue": {
@@ -391,9 +365,7 @@
             "description": ""
           }
         },
-        "tags": [
-          "tasks"
-        ]
+        "tags": ["tasks"]
       }
     },
     "/task-result/{taskResultId}": {
@@ -422,9 +394,7 @@
           }
         },
         "summary": "Get task results by task result ID",
-        "tags": [
-          "TaskResult"
-        ]
+        "tags": ["TaskResult"]
       }
     },
     "/activity/task-result": {
@@ -446,9 +416,7 @@
             }
           }
         },
-        "tags": [
-          "Activity"
-        ]
+        "tags": ["Activity"]
       }
     },
     "/activity/queue": {
@@ -470,9 +438,7 @@
             }
           }
         },
-        "tags": [
-          "Activity"
-        ]
+        "tags": ["Activity"]
       }
     },
     "/activity/task-result/{taskResultId}": {
@@ -500,9 +466,7 @@
             }
           }
         },
-        "tags": [
-          "Activity"
-        ]
+        "tags": ["Activity"]
       },
       "delete": {
         "operationId": "ActivityController_stopTask",
@@ -521,9 +485,7 @@
             "description": ""
           }
         },
-        "tags": [
-          "Activity"
-        ]
+        "tags": ["Activity"]
       }
     },
     "/activity/queue-events": {
@@ -542,9 +504,7 @@
             }
           }
         },
-        "tags": [
-          "Activity"
-        ]
+        "tags": ["Activity"]
       }
     },
     "/arguments": {
@@ -573,9 +533,7 @@
             }
           }
         },
-        "tags": [
-          "Argument"
-        ]
+        "tags": ["Argument"]
       }
     },
     "/arguments/{id}": {
@@ -613,9 +571,7 @@
             }
           }
         },
-        "tags": [
-          "Argument"
-        ]
+        "tags": ["Argument"]
       },
       "delete": {
         "operationId": "ArgumentController_remove",
@@ -634,9 +590,7 @@
             "description": ""
           }
         },
-        "tags": [
-          "Argument"
-        ]
+        "tags": ["Argument"]
       }
     },
     "/task/{name}/queue": {
@@ -667,9 +621,7 @@
             "description": ""
           }
         },
-        "tags": [
-          "Cli"
-        ]
+        "tags": ["Cli"]
       }
     },
     "/task/{name}/execute": {
@@ -700,9 +652,38 @@
             "description": ""
           }
         },
-        "tags": [
-          "Cli"
-        ]
+        "tags": ["Cli"]
+      }
+    },
+    "/task-result/output/{taskResultId}": {
+      "get": {
+        "operationId": "TaskResultOutputController_findAll",
+        "parameters": [
+          {
+            "name": "taskResultId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/TaskResultOutput"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "tags": ["TaskResultOutput"]
       }
     }
   },
@@ -773,6 +754,25 @@
           "updatedAt"
         ]
       },
+      "TaskResultOutput": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "taskResult": {
+            "$ref": "#/components/schemas/TaskResult"
+          },
+          "line": {
+            "type": "string"
+          },
+          "createdAt": {
+            "format": "date-time",
+            "type": "string"
+          }
+        },
+        "required": ["id", "taskResult", "line", "createdAt"]
+      },
       "TaskResult": {
         "type": "object",
         "properties": {
@@ -786,16 +786,13 @@
             "$ref": "#/components/schemas/TaskRun"
           },
           "output": {
-            "type": "string",
-            "nullable": true
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/TaskResultOutput"
+            }
           },
           "status": {
-            "enum": [
-              "IN_PROGRESS",
-              "SUCCESS",
-              "FAILED",
-              "STOPPED"
-            ],
+            "enum": ["IN_PROGRESS", "SUCCESS", "FAILED", "STOPPED"],
             "type": "string"
           },
           "createdAt": {
@@ -807,14 +804,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "id",
-          "task",
-          "output",
-          "status",
-          "createdAt",
-          "updatedAt"
-        ]
+        "required": ["id", "task", "status", "createdAt", "updatedAt"]
       },
       "Task": {
         "type": "object",
@@ -959,12 +949,7 @@
             }
           }
         },
-        "required": [
-          "id",
-          "name",
-          "required",
-          "commands"
-        ]
+        "required": ["id", "name", "required", "commands"]
       },
       "CreateArgumentDto": {
         "type": "object",
@@ -982,10 +967,7 @@
             "description": "The ID of the command this argument belongs to (optional)."
           }
         },
-        "required": [
-          "name",
-          "required"
-        ]
+        "required": ["name", "required"]
       },
       "CreateCommandDto": {
         "type": "object",
@@ -1023,12 +1005,7 @@
             "description": "Optional task ID to associate the command with a specific task.\n@type {string}"
           }
         },
-        "required": [
-          "wd",
-          "name",
-          "command",
-          "format"
-        ]
+        "required": ["wd", "name", "command", "format"]
       },
       "UpdateCommandDto": {
         "type": "object",
@@ -1092,9 +1069,7 @@
             }
           }
         },
-        "required": [
-          "name"
-        ]
+        "required": ["name"]
       },
       "UpdateTaskDto": {
         "type": "object",
@@ -1178,9 +1153,7 @@
             "type": "string"
           }
         },
-        "required": [
-          "taskResultId"
-        ]
+        "required": ["taskResultId"]
       },
       "UpdateArgumentDto": {
         "type": "object",
